--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta property="og:title" content="GOVT. Associate College Jalalpur Bhattian." />
+  <meta property="og:description" content="The college strives to provide a supportive and empowering learning environment for students, helping them to achieve their full potential and succeed in their chosen field." />
 
   <title>GAC - Jalalpur Bhattian </title>
   <meta content="" name="description">
